<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawerlayout"
    tools:context=".home.HomepageActivity">


    <include layout="@layout/content_main" />

    <!-- Adding bottom sheet after main content -->
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- rider data bottom sheet -->
        <include layout="@layout/bottom_sheet" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <LinearLayout
        android:id="@+id/lldrawer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@color/colorWhite"
        android:clickable="true"
        android:focusable="true"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:background="@drawable/ic_rectangle"
            android:orientation="vertical">


            <de.hdodenhof.circleimageview.CircleImageView xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/profile_image"
                android:layout_width="@dimen/m100dp"
                android:layout_height="@dimen/m100dp"
                android:src="@drawable/personimg"
                app:civ_border_width="2dp"
                app:civ_border_color="@color/colorWhite" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:layout_margin="@dimen/m15dp"
                android:textSize="@dimen/s18sp"
                android:text="Alvin Armstrong" />
        </LinearLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollIndicators="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/m15dp"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_home"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/m15dp"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvHome"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/home"
                        android:textColor="@color/colorBlack"
                        android:drawableLeft="@drawable/ic_home"
                        android:drawablePadding="@dimen/m35dp"
                        android:textSize="14dp"
                        android:visibility="visible" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_wallet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/m15dp"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvWallet"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/my_wallet"
                        android:textColor="@color/colorBlack"
                        android:drawableLeft="@drawable/ic_wallet"
                        android:drawablePadding="@dimen/m35dp"
                        android:textSize="14dp"
                        android:visibility="visible" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/m15dp"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvhistory"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/history"
                        android:textColor="@color/colorBlack"
                        android:drawableLeft="@drawable/ic_history"
                        android:drawablePadding="@dimen/m35dp"
                        android:textSize="14dp"
                        android:visibility="visible" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_notification"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/m15dp"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvNotification"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/notification"
                        android:textColor="@color/colorBlack"
                        android:drawableLeft="@drawable/ic_notification"
                        android:drawablePadding="@dimen/m35dp"
                        android:textSize="14dp"
                        android:visibility="visible" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_inviteFrnd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/m15dp"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvInviteFrnd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/invite_friends"
                        android:textColor="@color/colorBlack"
                        android:drawableLeft="@drawable/ic_gift_box"
                        android:drawablePadding="@dimen/m35dp"
                        android:textSize="14dp"
                        android:visibility="visible" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/m15dp"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvSettings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/settings"
                        android:textColor="@color/colorBlack"
                        android:drawableLeft="@drawable/ic_settings"
                        android:drawablePadding="@dimen/m35dp"
                        android:textSize="14dp"
                        android:visibility="visible" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/ll_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/m15dp"
                    android:background="?attr/selectableItemBackground"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/tvLogout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:text="@string/logout"
                        android:textColor="@color/colorBlack"
                        android:drawableLeft="@drawable/ic_logout"
                        android:drawablePadding="@dimen/m35dp"
                        android:textSize="14dp"
                        android:visibility="visible" />

                </LinearLayout>


            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

</androidx.drawerlayout.widget.DrawerLayout>