<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack"
    tools:context=".invitefriend.InviteCodeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBlack"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="0dp"
            android:layout_weight="7.5">
            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="230dp"
                android:layout_alignParentBottom="true"
                android:background="@drawable/city_building"
                android:layout_gravity="bottom"/>
            <LinearLayout
                android:id="@+id/lllogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="@dimen/Margin20dp"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/tvTitle"
                    android:layout_width="@dimen/m170dp"
                    android:layout_height="@dimen/m170dp"
                    android:src="@drawable/ic_invite"
                    android:layout_gravity="center"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/m50dp"
                    android:text="@string/invite_friends_get_2_coupons_each"
                    android:gravity="center"
                    android:textSize="@dimen/s24sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorWhite" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/m20dp"
                    android:text="@string/when_your_friend_sign_up_with_your_referral_code_you_ll_both_get_2_0_coupons"
                    android:gravity="center"
                    android:textSize="@dimen/s14sp"
                    android:textColor="@color/colorWhite" />
            </LinearLayout>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="3.5"
            android:scaleType="fitXY"
            android:orientation="vertical"
            android:background="@color/colorWhite">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorfontBlack"
                android:layout_marginLeft="@dimen/m10dp"
                android:layout_marginBottom="@dimen/m10dp"
                android:layout_marginTop="@dimen/m15dp"
                android:textStyle="bold"
                android:textSize="@dimen/s16sp"
                android:text="Share Your Invite Code"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/colorfontBlack"
                android:layout_margin="@dimen/m10dp"
                android:drawableRight="@drawable/ic_share_arrow"
                android:textSize="@dimen/s24sp"
                android:textStyle="bold"
                android:text="ABC123"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/m1dp"
                android:layout_marginLeft="@dimen/m10dp"
                android:layout_marginRight="@dimen/m10dp"
                android:background="@color/colorView"/>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">
        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center">


        </androidx.core.widget.NestedScrollView>
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/ll_wallet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/Margin20dp"
        android:layout_gravity="center_vertical"
        android:orientation="horizontal">
        <ImageView
            android:id="@+id/ivBack"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/m50dp"
            android:src="@drawable/ic_left_arrow" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/m50dp"
            android:text="Invite Friends"
            android:gravity="center"
            android:textSize="@dimen/s18sp"
            android:textStyle="bold"
            android:textColor="@color/colorWhite" />



    </RelativeLayout>




    <TextView
        android:id="@+id/tvTerms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/colorWhite"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/m30dp"
        android:layout_marginRight="@dimen/m20dp"
        android:layout_marginLeft="@dimen/m20dp"
        android:padding="@dimen/Margin15dp"
        android:gravity="center"
        android:textSize="@dimen/s18sp"
        android:background="@drawable/signin_btn_grad"
        android:text="@string/invite_friends"/>

</RelativeLayout>